--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <body>
 <h1><center>BFA PORFOLIO</center></h1>
       <div>
-<a href="file:///C:/Users/Alicia/Desktop/index/interactive-art/index.html"><img src="websitelink.jpg" alt="interactive link" class="600px; 400px"></a>
+<a href="bfa websiteportfolio/bfaportfolio/interactive-website/index.html"><img src="websitelink.jpg" alt="interactive link" class="600px; 400px"></a>
 </div>
-      </body>
+</body>``
     </html>
