--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <body>
 <h1><center>BFA PORFOLIO</center></h1>
       <div>
-<a href="bfa websiteportfolio/bfaportfolio/interactive-website/index.html"><img src="websitelink.jpg" alt="interactive link" class="600px; 400px"></a>
+<a href="abreinke.github.io/bfaportfolio/interactive-website.html"><img src="websitelink.jpg" alt="interactive link" class="600px; 400px"></a>
 </div>
 </body>``
     </html>
