--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       <body>
 <h1>BFA PORFOLIO</h1>
 <div>
+<p>I'm a multimedia artist who mostly focuses on digital media art and photography, but I'm always looking for ways to expand my artistic style. </p>
+</div>
+<div>
 <h2>WEBSITE WORK</h2>
 <a href="interactive-website/index2.html"><img src="websitelink.jpg" alt="interactive link" class="600px; 320px"></a>
 </div>
