--- a/index.html
+++ b/index.html
@@ -7,33 +7,16 @@
       <link rel="stylesheet" type="text/css" href="styles.css">
       <body>
 <h1>BFA PORFOLIO</h1>
-<div>
-<p>I'm a multimedia artist who mostly focuses on digital media art and photography, but I'm always looking for ways to expand my artistic style. </p>
+<h2>I'm a multimedia artist who mostly focuses on digital media art and photography, but I'm always looking for ways to expand my artistic style.</h2>
 </div>
 <div>
-<h2>WEBSITE WORK</h2>
-<a href="interactive-website/index2.html"><img src="websitelink.jpg" alt="interactive link" class="600px; 320px"></a>
-</div>
-<div>
-<h2>VIDEO WORK</h2>
-<iframe src="https://player.vimeo.com/video/367861585" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-<iframe src="https://player.vimeo.com/video/330166497" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-</div>
-<div>
-<h2>PHOTOGRAPHY WORK</h2>
-<img src="amber.jpg" alt="dog running" class="600px; 400px"></img>
-<img src="bee.jpg" alt="bee on flower" class="600px; 400px"></img>
-</div>
-<div>
-<h2>DIGITAL WORK</h2>
-<img src="cranes.jpg" alt="crane collage" class="500px; 375px"></img>
-<img src="tahoe.jpg" alt="sunglasses collage" class="500px; 375px"></img>
-<img src="waves.jpg" alt="seagull and tile background" class="500px; 375px"></img>
-</div>
-<div>
-<h2>CLASS WORK</h2>
-<img src="selfie.jpg" alt="girl with camera" class="375px; 500px"></img>
-<img src="poppies.jpg" alt="orange poppies" class="500px; 375px"></img>
+<h2><center>
+<a href="websitework.html">Website Work</a>
+<a href="videowork.html">Video Work</a>
+<a href="photographywork.html">Photography Work</a>
+<a href="digitalwork.html">Digital Work</a>
+<a href="classwork.html">Class Work</a>
+</center></h2>
 </div>
 </body>
     </html>
