--- a/videowork.html
+++ b/videowork.html
@@ -15,6 +15,8 @@
         </center></h2>
     <h1>VIDEO WORK</h1>
     <iframe src="https://player.vimeo.com/video/367861585" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h2>"A Place Called Home" is a narrative of the things that I see whenever I visit my hometown of Sacramento.</h2>
     <iframe src="https://player.vimeo.com/video/330166497" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h2>"Life of A Dandelion" is a video project which is meant to help us embrace the "bad" parts of nature.</h2>
         </body>
       </html>
