--- a/websitework.html
+++ b/websitework.html
@@ -15,6 +15,6 @@
         </center></h2>
         <h1></h1>
         <a href="interactive-website/index2.html"><img src="websitelink.jpg" alt="interactive link" class="600px; 320px"></a>
-<h2>"Interactive Website" is meant to be an inspirational project.  It's based on wisdom that I'd give to someone.</h2>
+<h2>"Things to Take Note Of" is meant to be a web-based, inspirational project.  It's based on wisdom that I'd give to someone.</h2>
       </body>
       </html>
