--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 <a href="photographywork.html">Photography Work</a>
 <a href="digitalwork.html">Digital Work</a>
 <a href="classwork.html">Class Work</a>
+</div>
+<div>
+<img src="bee-tile.jpg" alt="bee" class="400px; 400px"></img>
+<img src="flower-tile.jpg" alt="flower" class="400px; 400px"></img>
+<img src="shades-tile.jpg" alt="shades" class="400px; 400px"></img>
 </center></h2>
 </div>
 </body>
