--- a/classwork.html
+++ b/classwork.html
@@ -2,10 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-24">
-        <title>Portfolio</title>
+        <title>Class Work</title>
       </head>
       <link rel="stylesheet" type="text/css" href="styles.css">
       <body>
+      <h1>BFA PORTFOLIO</h1>
         <h2><center>
         <a href="index.html">Index</a>
         <a href="websitework.html">Website Work</a>
