--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 </center></h2>
 </div>
 <div>
-<p>
+<p><center>
 <img src="bee-tile.jpg" alt="bee" class="400px; 400px"></img>
 <img src="flower-tile.jpg" alt="flower" class="400px; 400px"></img>
 <img src="shades-tile.jpg" alt="shades" class="400px; 400px"></img>
+</center></p>
 </div>
-</p>
 </body>
     </html>
