--- a/photographywork.html
+++ b/photographywork.html
@@ -6,6 +6,7 @@
       </head>
       <link rel="stylesheet" type="text/css" href="styles.css">
 <body>
+  <h1>BFA PORTFOLIO</h1>
   <h2><center>
   <a href="index.html">Index</a>
   <a href="websitework.html">Website Work</a>
