--- a/classwork.html
+++ b/classwork.html
@@ -6,7 +6,7 @@
       </head>
       <link rel="stylesheet" type="text/css" href="styles.css">
       <body>
-      <h1>BFA PORTFOLIO</h1>
+      <h1>BFA PORTFOLIO- Class Work</h1>
         <h2><center>
         <a href="index.html">Index</a>
         <a href="websitework.html">Website Work</a>
@@ -14,7 +14,6 @@
         <a href="photographywork.html">Photography Work</a>
         <a href="digitalwork.html">Digital Work</a>
         </center></h2>
-<h1>CLASS WORK</h1>
 <img src="selfie.jpg" alt="girl with camera" class="375px; 500px"></img>
 <h2>"Selfie" (375px; 500px)- This is an experimental project which I did as an exercise in ART 74.</h2>
 <img src="poppies.jpg" alt="orange poppies" class="500px; 375px"></img>
