--- a/websitework.html
+++ b/websitework.html
@@ -6,7 +6,7 @@
       </head>
       <link rel="stylesheet" type="text/css" href="styles.css">
       <body>
-        <h1>BFA PORTFOLIO</h1>
+        <h1>BFA PORTFOLIO- Website Work</h1>
         <h2><center>
         <a href="index.html">Index</a>
         <a href="videowork.html">Video Work</a>
@@ -14,7 +14,6 @@
         <a href="digitalwork.html">Digital Work</a>
         <a href="classwork.html">Class Work</a>
         </center></h2>
-        <h1>WEBSITE WORK</h1>
         <a href="interactive-website/index2.html"><img src="websitelink.jpg" alt="interactive link" class="600px; 320px"></a>
 <h2>"Things to Take Note Of" is meant to be a web-based, inspirational project.  It's based on wisdom that I'd give to someone.</h2>
       </body>
