--- a/videowork.html
+++ b/videowork.html
@@ -6,7 +6,7 @@
       </head>
       <link rel="stylesheet" type="text/css" href="styles.css">
       <body>
-        <h1>BFA PORTFOLIO</h1>
+        <h1>BFA PORTFOLIO- Video Work</h1>
         <h2><center>
         <a href="index.html">Index</a>
         <a href="websitework.html">Website Work</a>
@@ -14,8 +14,7 @@
         <a href="digitalwork.html">Digital Work</a>
         <a href="classwork.html">Class Work</a>
         </center></h2>
-    <h1>VIDEO WORK</h1>
-    <iframe src="https://player.vimeo.com/video/367861585" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+      <iframe src="https://player.vimeo.com/video/367861585" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 <h2>"A Place Called Home" is a narrative of the things that I see whenever I visit my hometown of Sacramento.</h2>
     <iframe src="https://player.vimeo.com/video/330166497" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 <h2>"Life of A Dandelion" is a video project which is meant to help us embrace the "bad" parts of nature.</h2>
