--- a/digitalwork.html
+++ b/digitalwork.html
@@ -6,19 +6,25 @@
       </head>
       <link rel="stylesheet" type="text/css" href="styles.css">
       <body>
-        <h1>BFA PORTFOLIO- Digital Work</h1>
-        <h2><center>
+        <h1>BFA PORTFOLIO</h1>
+        <h1>Digital Work</h1>
+        <center>
         <a href="index.html">Index</a>
-        <a href="websitework.html">Website Work</a>
+        <a href="web-basedwork.html">Web-Based Work</a>
         <a href="videowork.html">Video Work</a>
-        <a href="photographywork.html">Photography Work</a>
-        <a href="classwork.html">Class Work</a>
-        </center></h2>
+        <a href="artiststatement.html">Artist Statement</a>
+        </center>
+        <img src="fallingsand.jpg" alt="hand collage" class="500px; 375px"></img>
+        <h2>FALLING SAND</h2>
+        <img src="buzz.jpg" alt="bee collage" class="500px; 375px"><img>
+        <h2>BUZZ</h2>
+        <img src="vortex.jpg" alt="flower and glass" class="500px; 375px"></img>
+        <h2>VORTEX</h2>
         <img src="cranes.jpg" alt="crane collage" class="500px; 375px"></img>
-        <h2>"Flight" (500px; 375px)- This is a collage which is intended to have a surreal theme.</h2>
+        <h2>FLIGHT (500px; 375px)- This is a collage which is intended to have a surreal theme.</h2>
         <img src="tahoe.jpg" alt="sunglasses collage" class="500px; 375px"></img>
-        <h2>"Tahoe" (500px; 375px)- This is a collage which has images from a trip to Lake Tahoe.</h2>
+        <h2>TAHOE (500px; 375px)- This is a collage which has images from a trip to Lake Tahoe.</h2>
         <img src="waves.jpg" alt="seagull and tile background" class="500px; 375px"></img>
-        <h2>"Waves" (500px; 375px)- This is a collage which has overlays of images from Oregon and New York.</h2>
+        <h2>WAVES (500px; 375px)- This is a collage which has overlays of images from Oregon and New York.</h2>
       </body>
       </html>
