--- a/index.html
+++ b/index.html
@@ -4,26 +4,21 @@
     <meta charset="utf-24">
         <title>Portfolio</title>
       </head>
-      <link rel="stylesheet" type="text/css" href="styles.css">
+      <link rel="stylesheet" type="text/css" href="styles.css"></link
       <body>
 <h1>BFA PORFOLIO</h1>
-<h2>I'm a multimedia artist who mostly focuses on digital media art and photography, but I'm always looking for ways to expand my artistic style.</h2>
-</div>
-<div>
-<h2><center>
-<a href="websitework.html">Website Work</a>
-<a href="videowork.html">Video Work</a>
-<a href="photographywork.html">Photography Work</a>
+<h1>Alicia Breinke</h1>
+<center>
+<a href="web-basedwork.html">Web-Based Work</a>
 <a href="digitalwork.html">Digital Work</a>
-<a href="classwork.html">Class Work</a>
-</center></h2>
-</div>
-<div>
-<p><center>
-<img src="bee-tile.jpg" alt="bee" class="400px; 400px"></img>
-<img src="flower-tile.jpg" alt="flower" class="400px; 400px"></img>
-<img src="shades-tile.jpg" alt="shades" class="400px; 400px"></img>
-</center></p>
-</div>
+<a href="videowork.html">Video Work</a>
+<a href="artiststatement.html">Artist Statement</a>
+</center>
+<h3><center>I'm a digital media artist who's mainly passionate about video art and digital collage work, <div>but I'm always looking for ways to learn new artistic ideas.</div></center></h3>
+<center>
+<img src="interactive-tile.jpg" alt="image of pen and notebook" class="400px; 400px"></img>
+<img src="digital-tile.jpg" alt="image of sunflower" class="400px; 400px"></img>
+<img src="video-tile.jpg" alt="image of lantern" class="400px; 400px"></img>
+</center>
 </body>
     </html>
