--- a/videowork.html
+++ b/videowork.html
@@ -6,17 +6,21 @@
       </head>
       <link rel="stylesheet" type="text/css" href="styles.css">
       <body>
-        <h1>BFA PORTFOLIO- Video Work</h1>
-        <h2><center>
-        <a href="index.html">Index</a>
-        <a href="websitework.html">Website Work</a>
-        <a href="photographywork.html">Photography Work</a>
-        <a href="digitalwork.html">Digital Work</a>
-        <a href="classwork.html">Class Work</a>
-        </center></h2>
+        <h1>BFA PORTFOLIO</h1>
+        <h1>Video Work</h1>
+        <center>
+          <a href="index.html">Index</a>
+          <a href="web-basedwork.html">Web-Based Work</a>
+          <a href="digitalwork.html">Digital Work</a>
+          <a href="artiststatement.html">Artist Statement</a>
+        </center>
       <iframe src="https://player.vimeo.com/video/367861585" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 <h2>"A Place Called Home" is a narrative of the things that I see whenever I visit my hometown of Sacramento.</h2>
-    <iframe src="https://player.vimeo.com/video/330166497" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<video class="lifecycle" width="640" autoplay loop muted>
+  <source
+  src="lifecycle.mp4"
+  type="video/mp4">
+</video>
 <h2>"Life of A Dandelion" is a video project which is meant to help us embrace the "bad" parts of nature.</h2>
         </body>
       </html>
