--- a/digitalwork.html
+++ b/digitalwork.html
@@ -6,25 +6,30 @@
       </head>
       <link rel="stylesheet" type="text/css" href="styles.css">
       <body>
-        <h1>BFA PORTFOLIO</h1>
-        <h1>Digital Work</h1>
-        <center>
-        <a href="index.html">Index</a>
-        <a href="web-basedwork.html">Web-Based Work</a>
-        <a href="videowork.html">Video Work</a>
-        <a href="artiststatement.html">Artist Statement</a>
-        </center>
+        <header>BFA PORTFOLIO</header>
+        <header>Digital Work</header>
+        <center><div>
+        <a href="index.html">MAIN PAGE</a>
+        <a href="web-basedwork.html">WEB-BASED WORK</a>
+        <a href="videowork.html">VIDEO WORK</a>
+        <a href="about.html">ARTIST STATEMENT</a>
+        </div></center>
         <img src="fallingsand.jpg" alt="hand collage" class="500px; 375px"></img>
-        <h2>FALLING SAND</h2>
+        <h2>Falling Sand</h2>
         <img src="buzz.jpg" alt="bee collage" class="500px; 375px"><img>
-        <h2>BUZZ</h2>
+        <h2>Buzz</h2>
         <img src="vortex.jpg" alt="flower and glass" class="500px; 375px"></img>
-        <h2>VORTEX</h2>
+        <h2>Vortex</h2>
         <img src="cranes.jpg" alt="crane collage" class="500px; 375px"></img>
-        <h2>FLIGHT (500px; 375px)- This is a collage which is intended to have a surreal theme.</h2>
+        <h2>Flight</h2>
+        <h2>Width: 500px Height: 375px</h2>
+        <h4>This is a collage which is intended to have a surreal theme.</h4>
         <img src="tahoe.jpg" alt="sunglasses collage" class="500px; 375px"></img>
-        <h2>TAHOE (500px; 375px)- This is a collage which has images from a trip to Lake Tahoe.</h2>
+        <h2>Tahoe (500px; 375px)</h2>
+        <h4>This is a collage which has images from a trip to Lake Tahoe.</h4>
         <img src="waves.jpg" alt="seagull and tile background" class="500px; 375px"></img>
-        <h2>WAVES (500px; 375px)- This is a collage which has overlays of images from Oregon and New York.</h2>
+        <h2>Waves (500px; 375px)</h2>
+        <h4>This is a collage which has overlays of images from Oregon and New York.</h4>
+      </div>
       </body>
       </html>
