--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
       </head>
       <link rel="stylesheet" type="text/css" href="styles.css"></link
       <body>
-<h1>BFA PORFOLIO</h1>
-<h1>Alicia Breinke</h1>
+<header>BFA PORTFOLIO</header>
+<header>Alicia Breinke</header>
 <center>
-<a href="web-basedwork.html">Web-Based Work</a>
-<a href="digitalwork.html">Digital Work</a>
-<a href="videowork.html">Video Work</a>
-<a href="artiststatement.html">Artist Statement</a>
+<a href="web-basedwork.html">WEB-BASED WORK</a>
+<a href="digitalwork.html">DIGITAL WORK</a>
+<a href="videowork.html">VIDEO WORK</a>
+<a href="about.html">ARTIST STATEMENT</a>
 </center>
-<h3><center>I'm a digital media artist who's mainly passionate about video art and digital collage work, <div>but I'm always looking for ways to learn new artistic ideas.</div></center></h3>
-<center>
+<h3>I'm a digital media artist who's mainly passionate about video art and digital collage work, but I'm always looking for ways to learn new artistic ideas.</h3>
 <img src="interactive-tile.jpg" alt="image of pen and notebook" class="400px; 400px"></img>
 <img src="digital-tile.jpg" alt="image of sunflower" class="400px; 400px"></img>
 <img src="video-tile.jpg" alt="image of lantern" class="400px; 400px"></img>
