--- a/videowork.html
+++ b/videowork.html
@@ -2,25 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-24">
-        <title>Video Work</title>
+      <title>Video Work</title>
       </head>
       <link rel="stylesheet" type="text/css" href="styles.css">
       <body>
-        <h1>BFA PORTFOLIO</h1>
-        <h1>Video Work</h1>
+        <header>BFA PORTFOLIO</header>
+        <header>Video Work</header>
         <center>
-          <a href="index.html">Index</a>
-          <a href="web-basedwork.html">Web-Based Work</a>
-          <a href="digitalwork.html">Digital Work</a>
-          <a href="artiststatement.html">Artist Statement</a>
+          <a href="index.html">MAIN PAGE</a>
+          <a href="web-basedwork.html">WEB-BASED WORK</a>
+          <a href="digitalwork.html">DIGITAL WORK</a>
+          <a href="about.html">ARTIST STATEMENT</a>
         </center>
-      <iframe src="https://player.vimeo.com/video/367861585" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-<h2>"A Place Called Home" is a narrative of the things that I see whenever I visit my hometown of Sacramento.</h2>
+<iframe src="https://player.vimeo.com/video/367861585" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<h4>"A Place Called Home" is a narrative of the things that I see whenever I visit my hometown of Sacramento.</h4>
 <video class="lifecycle" width="640" autoplay loop muted>
   <source
   src="lifecycle.mp4"
   type="video/mp4">
 </video>
-<h2>"Life of A Dandelion" is a video project which is meant to help us embrace the "bad" parts of nature.</h2>
+<h4>"Life of A Dandelion" is a video project which is meant to help us embrace the "bad" parts of nature.</h4>
         </body>
       </html>
