--- a/web-basedwork.html
+++ b/web-basedwork.html
@@ -6,19 +6,22 @@
       </head>
       <link rel="stylesheet" type="text/css" href="styles.css">
       <body>
-        <h1>BFA PORTFOLIO</h1>
-        <h1>Web-based Work</h1>
+        <header>BFA PORTFOLIO</header>
+        <header>Web-based Work</header>
         <div>
         <center>
-        <a href="index.html">Index</a>
-        <a href="digitalwork.html">Digital Work</a>
-        <a href="videowork.html">Video Work</a>
-        <a href="artiststatement.html">Artist Statement</a>
+        <a href="index.html">MAIN PAGE</a>
+        <a href="digitalwork.html">DIGITAL WORK</a>
+        <a href="videowork.html">VIDEO WORK</a>
+        <a href="about.html">ARTIST STATEMENT</a>
         </center>
-        <img src="screenshot.jpg" alt="notebook and pen" class="640; 360px"><div>
-      <a href="https://abreinke.github.io/interactiveart/">Things to Take Note Of</a>
-      <p>"Things to Take Note Of" is a web-based, inspirational project.  It was inspired by personal experiences and I'm intending for it to give people some wisdom.</p>
-      <img src="screenshot-drawing.jpg" alt="image of scribbles" class="640px; 360px"><div>
+        <div>
+        <img src="sound-image.jpg" alt="lightning painting" class="640px; 360px">
+      </div>
+      <a href="https://abreinke.github.io/final-project/">FINAL PROJECT: Storm Symphony</a>
+      <div>
+      <img src="screenshot-drawing.jpg" alt="image of scribbles" class="640px; 360px">
+    </div>
       <a href="https://abreinke.github.io/drawing-machine3/">Drawing Machine: Night Insects</a>
       </body>
       </html>
