--- a/web-basedwork.html
+++ b/web-basedwork.html
@@ -18,7 +18,7 @@
         <div>
         <img src="sound-image.jpg" alt="lightning painting" class="640px; 360px">
       </div>
-      <a href="https://abreinke.github.io/final-project/">FINAL PROJECT: Storm Symphony</a>
+      <a href="https://abreinke.github.io/website-finalproject/">FINAL PROJECT: Storm Symphony</a>
       <div>
       <img src="screenshot-drawing.jpg" alt="image of scribbles" class="640px; 360px">
     </div>
