--- a/digitalwork.html
+++ b/digitalwork.html
@@ -9,10 +9,10 @@
         <header>BFA PORTFOLIO</header>
         <header>Digital Work</header>
         <center><div>
-        <a href="index.html">MAIN PAGE</a>
-        <a href="web-basedwork.html">WEB-BASED WORK</a>
-        <a href="videowork.html">VIDEO WORK</a>
-        <a href="about.html">ARTIST STATEMENT</a>
+        <a href="index.html">Main Page</a>
+        <a href="web-basedwork.html">Code Work</a>
+        <a href="videowork.html">Video Work</a>
+        <a href="about.html">Artist Statement: About Me</a>
         </div></center>
         <img src="fallingsand.jpg" alt="hand collage" class="500px; 375px"></img>
         <h2>Falling Sand</h2>
