--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-24">
-        <title>Portfolio</title>
-      </head>
-      <link rel="stylesheet" type="text/css" href="styles.css"></link
-      <body>
-<header>BFA PORTFOLIO</header>
-<header>Alicia Breinke</header>
+<head>
+<link rel="stylesheet" type="text/css" href="styles.css"></link>
+<title>BFA Portfolio</title>
+</head>
+<style>
+img {
+  border-radius: 8px;
+}
+</style>
+<body>
 <center>
-<a href="web-basedwork.html">WEB-BASED WORK</a>
-<a href="digitalwork.html">DIGITAL WORK</a>
-<a href="videowork.html">VIDEO WORK</a>
-<a href="about.html">ARTIST STATEMENT</a>
+<a href="web-basedwork.html">Code Work</a>
+<a href="digitalwork.html">Digital Work</a>
+<a href="videowork.html">Video Work</a>
+<a href="about.html">Artist Statement: About Me</a>
 </center>
-<h3>I'm a digital media artist who's mainly passionate about video art and digital collage work, but I'm always looking for ways to learn new artistic ideas.</h3>
-<img src="interactive-tile.jpg" alt="image of pen and notebook" class="400px; 400px"></img>
-<img src="digital-tile.jpg" alt="image of sunflower" class="400px; 400px"></img>
-<img src="video-tile.jpg" alt="image of lantern" class="400px; 400px"></img>
+<header>BFA PORTFOLIO</header>
+<header>A compilation of code, digital, and video work</header>
+<center>
+<img src="interactive-tile.jpg" alt="image of lightning" class="400px; 400px">
+<img src="digital-tile.jpg" alt="image of paper cranes" class="400px; 400px">
+<img src="video-tile.jpg" alt="image of duck" class="400px; 400px">
 </center>
 </body>
-    </html>
+</html>
