--- a/videowork.html
+++ b/videowork.html
@@ -9,10 +9,10 @@
         <header>BFA PORTFOLIO</header>
         <header>Video Work</header>
         <center>
-          <a href="index.html">MAIN PAGE</a>
-          <a href="web-basedwork.html">WEB-BASED WORK</a>
-          <a href="digitalwork.html">DIGITAL WORK</a>
-          <a href="about.html">ARTIST STATEMENT</a>
+          <a href="index.html">Main Page</a>
+          <a href="web-basedwork.html">Code Work</a>
+          <a href="digitalwork.html">Digital Work</a>
+          <a href="about.html">Artist Statement</a>
         </center>
 <iframe src="https://player.vimeo.com/video/367861585" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 <h4>"A Place Called Home" is a narrative of the things that I see whenever I visit my hometown of Sacramento.</h4>
