--- a/web-basedwork.html
+++ b/web-basedwork.html
@@ -10,10 +10,10 @@
         <header>Web-based Work</header>
         <div>
         <center>
-        <a href="index.html">MAIN PAGE</a>
-        <a href="digitalwork.html">DIGITAL WORK</a>
-        <a href="videowork.html">VIDEO WORK</a>
-        <a href="about.html">ARTIST STATEMENT</a>
+        <a href="index.html">Main Page</a>
+        <a href="digitalwork.html">Digital Work</a>
+        <a href="videowork.html">Video Work</a>
+        <a href="about.html">Artist Statement: About Me</a>
         </center>
         <div>
       <img src="sound-image.jpg" alt="lightning painting" class="640px; 360px">
