--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ img {
 <header>BFA PORTFOLIO</header>
 <header>A compilation of code, digital, and video work</header>
 <center>
-<img src="interactive-tile.jpg" alt="image of lightning" class="400px; 400px"></img>
-<img src="digital-tile.jpg" alt="image of paper cranes" class="400px; 400px"></img>
-<img src="video-tile.jpg" alt="image of duck" class="400px; 400px"></img>
+<img src="interactivetile-lightning.jpg" alt="image of lightning" class="400px; 400px"></img>
+<img src="digitaltile-cranes.jpg" alt="image of paper cranes" class="400px; 400px"></img>
+<img src="videotile-duck.jpg" alt="image of duck" class="400px; 400px"></img>
 </center>
 </body>
 </html>
