--- a/web-basedwork.html
+++ b/web-basedwork.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" type="text/css" href="styles.css">
       <body>
         <header>BFA PORTFOLIO</header>
-        <header>Web-based Work</header>
+        <header>Code Work</header>
         <div>
         <center>
         <a href="index.html">Main Page</a>
